--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
